parser/C2Parser.cpp

// Generated from C2.g4 by ANTLR 4.13.2


#include "C2Visitor.h"

#include "C2Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct C2ParserStaticData final {
  C2ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  C2ParserStaticData(const C2ParserStaticData&) = delete;
  C2ParserStaticData(C2ParserStaticData&&) = delete;
  C2ParserStaticData& operator=(const C2ParserStaticData&) = delete;
  C2ParserStaticData& operator=(C2ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag c2ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<C2ParserStaticData> c2ParserStaticData = nullptr;

void c2ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (c2ParserStaticData != nullptr) {
    return;
  }
#else
  assert(c2ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<C2ParserStaticData>(
    std::vector<std::string>{
      "program", "instruction", "if_instr", "while_instr", "print", "brackets", 
      "var", "expr", "compare", "addsub", "muldiv", "unary", "primary"
    },
    std::vector<std::string>{
      "", "';'", "'if'", "'('", "')'", "'else'", "'while'", "'print'", "','", 
      "'{'", "'}'", "'int'", "'='", "'double'", "'>'", "'<'", "'>='", "'<='", 
      "'=='", "'!='", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "INT", "DOUBLE", "NAME", "WS", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  c2ParserStaticData = std::move(staticData);
}

}

C2Parser::C2Parser(TokenStream *input) : C2Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

C2Parser::C2Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  C2Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *c2ParserStaticData->atn, c2ParserStaticData->decisionToDFA, c2ParserStaticData->sharedContextCache, options);
}

C2Parser::~C2Parser() {
  delete _interpreter;
}

const atn::ATN& C2Parser::getATN() const {
  return *c2ParserStaticData->atn;
}

std::string C2Parser::getGrammarFileName() const {
  return "C2.g4";
}

const std::vector<std::string>& C2Parser::getRuleNames() const {
  return c2ParserStaticData->ruleNames;
}

const dfa::Vocabulary& C2Parser::getVocabulary() const {
  return c2ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView C2Parser::getSerializedATN() const {
  return c2ParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

C2Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* C2Parser::ProgramContext::EOF() {
  return getToken(C2Parser::EOF, 0);
}

std::vector<C2Parser::InstructionContext *> C2Parser::ProgramContext::instruction() {
  return getRuleContexts<C2Parser::InstructionContext>();
}

C2Parser::InstructionContext* C2Parser::ProgramContext::instruction(size_t i) {
  return getRuleContext<C2Parser::InstructionContext>(i);
}


size_t C2Parser::ProgramContext::getRuleIndex() const {
  return C2Parser::RuleProgram;
}


std::any C2Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::ProgramContext* C2Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, C2Parser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 119548622) != 0)) {
      setState(26);
      instruction();
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(32);
    match(C2Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

C2Parser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t C2Parser::InstructionContext::getRuleIndex() const {
  return C2Parser::RuleInstruction;
}

void C2Parser::InstructionContext::copyFrom(InstructionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Expr_lineContext ------------------------------------------------------------------

C2Parser::ExprContext* C2Parser::Expr_lineContext::expr() {
  return getRuleContext<C2Parser::ExprContext>(0);
}

C2Parser::Expr_lineContext::Expr_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::Expr_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitExpr_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Print_lineContext ------------------------------------------------------------------

C2Parser::PrintContext* C2Parser::Print_lineContext::print() {
  return getRuleContext<C2Parser::PrintContext>(0);
}

C2Parser::Print_lineContext::Print_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::Print_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitPrint_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- If_lineContext ------------------------------------------------------------------

C2Parser::If_instrContext* C2Parser::If_lineContext::if_instr() {
  return getRuleContext<C2Parser::If_instrContext>(0);
}

C2Parser::If_lineContext::If_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::If_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitIf_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- While_lineContext ------------------------------------------------------------------

C2Parser::While_instrContext* C2Parser::While_lineContext::while_instr() {
  return getRuleContext<C2Parser::While_instrContext>(0);
}

C2Parser::While_lineContext::While_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::While_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitWhile_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Brackets_lineContext ------------------------------------------------------------------

C2Parser::BracketsContext* C2Parser::Brackets_lineContext::brackets() {
  return getRuleContext<C2Parser::BracketsContext>(0);
}

C2Parser::Brackets_lineContext::Brackets_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::Brackets_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitBrackets_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Var_lineContext ------------------------------------------------------------------

C2Parser::VarContext* C2Parser::Var_lineContext::var() {
  return getRuleContext<C2Parser::VarContext>(0);
}

C2Parser::Var_lineContext::Var_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::Var_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitVar_line(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Void_lineContext ------------------------------------------------------------------

C2Parser::Void_lineContext::Void_lineContext(InstructionContext *ctx) { copyFrom(ctx); }


std::any C2Parser::Void_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitVoid_line(this);
  else
    return visitor->visitChildren(this);
}
C2Parser::InstructionContext* C2Parser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 2, C2Parser::RuleInstruction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case C2Parser::T__10:
      case C2Parser::T__12: {
        _localctx = _tracker.createInstance<C2Parser::Var_lineContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(34);
        var();
        setState(35);
        match(C2Parser::T__0);
        break;
      }

      case C2Parser::T__2:
      case C2Parser::T__20:
      case C2Parser::INT:
      case C2Parser::DOUBLE:
      case C2Parser::NAME: {
        _localctx = _tracker.createInstance<C2Parser::Expr_lineContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(37);
        expr();
        setState(38);
        match(C2Parser::T__0);
        break;
      }

      case C2Parser::T__1: {
        _localctx = _tracker.createInstance<C2Parser::If_lineContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(40);
        if_instr();
        break;
      }

      case C2Parser::T__5: {
        _localctx = _tracker.createInstance<C2Parser::While_lineContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(41);
        while_instr();
        break;
      }

      case C2Parser::T__6: {
        _localctx = _tracker.createInstance<C2Parser::Print_lineContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(42);
        print();
        setState(43);
        match(C2Parser::T__0);
        break;
      }

      case C2Parser::T__8: {
        _localctx = _tracker.createInstance<C2Parser::Brackets_lineContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(45);
        brackets();
        break;
      }

      case C2Parser::T__0: {
        _localctx = _tracker.createInstance<C2Parser::Void_lineContext>(_localctx);
        enterOuterAlt(_localctx, 7);
        setState(46);
        match(C2Parser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_instrContext ------------------------------------------------------------------

C2Parser::If_instrContext::If_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C2Parser::ExprContext* C2Parser::If_instrContext::expr() {
  return getRuleContext<C2Parser::ExprContext>(0);
}

std::vector<C2Parser::InstructionContext *> C2Parser::If_instrContext::instruction() {
  return getRuleContexts<C2Parser::InstructionContext>();
}

C2Parser::InstructionContext* C2Parser::If_instrContext::instruction(size_t i) {
  return getRuleContext<C2Parser::InstructionContext>(i);
}


size_t C2Parser::If_instrContext::getRuleIndex() const {
  return C2Parser::RuleIf_instr;
}


std::any C2Parser::If_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitIf_instr(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::If_instrContext* C2Parser::if_instr() {
  If_instrContext *_localctx = _tracker.createInstance<If_instrContext>(_ctx, getState());
  enterRule(_localctx, 4, C2Parser::RuleIf_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(C2Parser::T__1);
    setState(50);
    match(C2Parser::T__2);
    setState(51);
    expr();
    setState(52);
    match(C2Parser::T__3);
    setState(53);
    instruction();
    setState(56);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(54);
      match(C2Parser::T__4);
      setState(55);
      instruction();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_instrContext ------------------------------------------------------------------

C2Parser::While_instrContext::While_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C2Parser::ExprContext* C2Parser::While_instrContext::expr() {
  return getRuleContext<C2Parser::ExprContext>(0);
}

C2Parser::InstructionContext* C2Parser::While_instrContext::instruction() {
  return getRuleContext<C2Parser::InstructionContext>(0);
}


size_t C2Parser::While_instrContext::getRuleIndex() const {
  return C2Parser::RuleWhile_instr;
}


std::any C2Parser::While_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitWhile_instr(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::While_instrContext* C2Parser::while_instr() {
  While_instrContext *_localctx = _tracker.createInstance<While_instrContext>(_ctx, getState());
  enterRule(_localctx, 6, C2Parser::RuleWhile_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(C2Parser::T__5);
    setState(59);
    match(C2Parser::T__2);
    setState(60);
    expr();
    setState(61);
    match(C2Parser::T__3);
    setState(62);
    instruction();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintContext ------------------------------------------------------------------

C2Parser::PrintContext::PrintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<C2Parser::ExprContext *> C2Parser::PrintContext::expr() {
  return getRuleContexts<C2Parser::ExprContext>();
}

C2Parser::ExprContext* C2Parser::PrintContext::expr(size_t i) {
  return getRuleContext<C2Parser::ExprContext>(i);
}


size_t C2Parser::PrintContext::getRuleIndex() const {
  return C2Parser::RulePrint;
}


std::any C2Parser::PrintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitPrint(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::PrintContext* C2Parser::print() {
  PrintContext *_localctx = _tracker.createInstance<PrintContext>(_ctx, getState());
  enterRule(_localctx, 8, C2Parser::RulePrint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(C2Parser::T__6);
    setState(65);
    match(C2Parser::T__2);
    setState(66);
    expr();
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C2Parser::T__7) {
      setState(67);
      match(C2Parser::T__7);
      setState(68);
      expr();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(C2Parser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BracketsContext ------------------------------------------------------------------

C2Parser::BracketsContext::BracketsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<C2Parser::InstructionContext *> C2Parser::BracketsContext::instruction() {
  return getRuleContexts<C2Parser::InstructionContext>();
}

C2Parser::InstructionContext* C2Parser::BracketsContext::instruction(size_t i) {
  return getRuleContext<C2Parser::InstructionContext>(i);
}


size_t C2Parser::BracketsContext::getRuleIndex() const {
  return C2Parser::RuleBrackets;
}


std::any C2Parser::BracketsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitBrackets(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::BracketsContext* C2Parser::brackets() {
  BracketsContext *_localctx = _tracker.createInstance<BracketsContext>(_ctx, getState());
  enterRule(_localctx, 10, C2Parser::RuleBrackets);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(C2Parser::T__8);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 119548622) != 0)) {
      setState(77);
      instruction();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(83);
    match(C2Parser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarContext ------------------------------------------------------------------

C2Parser::VarContext::VarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* C2Parser::VarContext::NAME() {
  return getToken(C2Parser::NAME, 0);
}

C2Parser::ExprContext* C2Parser::VarContext::expr() {
  return getRuleContext<C2Parser::ExprContext>(0);
}


size_t C2Parser::VarContext::getRuleIndex() const {
  return C2Parser::RuleVar;
}


std::any C2Parser::VarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitVar(this);
  else
    return visitor->visitChildren(this);
}

C2Parser::VarContext* C2Parser::var() {
  VarContext *_localctx = _tracker.createInstance<VarContext>(_ctx, getState());
  enterRule(_localctx, 12, C2Parser::RuleVar);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case C2Parser::T__10: {
        enterOuterAlt(_localctx, 1);
        setState(85);
        match(C2Parser::T__10);
        setState(86);
        match(C2Parser::NAME);
        setState(89);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == C2Parser::T__11) {
          setState(87);
          match(C2Parser::T__11);
          setState(88);
          expr();
        }
        break;
      }

      case C2Parser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(91);
        match(C2Parser::T__12);
        setState(92);
        match(C2Parser::NAME);
        setState(95);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == C2Parser::T__11) {
          setState(93);
          match(C2Parser::T__11);
          setState(94);
          expr();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

C2Parser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t C2Parser::ExprContext::getRuleIndex() const {
  return C2Parser::RuleExpr;
}

void C2Parser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToCompareContext ------------------------------------------------------------------

C2Parser::CompareContext* C2Parser::ToCompareContext::compare() {
  return getRuleContext<C2Parser::CompareContext>(0);
}

C2Parser::ToCompareContext::ToCompareContext(ExprContext *ctx) { copyFrom(ctx); }


std::any C2Parser::ToCompareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitToCompare(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignExprContext ------------------------------------------------------------------

tree::TerminalNode* C2Parser::AssignExprContext::NAME() {
  return getToken(C2Parser::NAME, 0);
}

C2Parser::ExprContext* C2Parser::AssignExprContext::expr() {
  return getRuleContext<C2Parser::ExprContext>(0);
}

C2Parser::AssignExprContext::AssignExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any C2Parser::AssignExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitAssignExpr(this);
  else
    return visitor->visitChildren(this);
}
C2Parser::ExprContext* C2Parser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 14, C2Parser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<C2Parser::AssignExprContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(99);
      match(C2Parser::NAME);
      setState(100);
      match(C2Parser::T__11);
      setState(101);
      expr();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<C2Parser::ToCompareContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(102);
      compare();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareContext ------------------------------------------------------------------

C2Parser::CompareContext::CompareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t C2Parser::CompareContext::getRuleIndex() const {
  return C2Parser::RuleCompare;
}

void C2Parser::CompareContext::copyFrom(CompareContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CompareExprContext ------------------------------------------------------------------

std::vector<C2Parser::AddsubContext *> C2Parser::CompareExprContext::addsub() {
  return getRuleContexts<C2Parser::AddsubContext>();
}

C2Parser::AddsubContext* C2Parser::CompareExprContext::addsub(size_t i) {
  return getRuleContext<C2Parser::AddsubContext>(i);
}

C2Parser::CompareExprContext::CompareExprContext(CompareContext *ctx) { copyFrom(ctx); }


std::any C2Parser::CompareExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitCompareExpr(this);
  else
    return visitor->visitChildren(this);
}
C2Parser::CompareContext* C2Parser::compare() {
  CompareContext *_localctx = _tracker.createInstance<CompareContext>(_ctx, getState());
  enterRule(_localctx, 16, C2Parser::RuleCompare);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<C2Parser::CompareExprContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(105);
    addsub();
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1032192) != 0)) {
      setState(106);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1032192) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(107);
      addsub();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddsubContext ------------------------------------------------------------------

C2Parser::AddsubContext::AddsubContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t C2Parser::AddsubContext::getRuleIndex() const {
  return C2Parser::RuleAddsub;
}

void C2Parser::AddsubContext::copyFrom(AddsubContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AddSubExprContext ------------------------------------------------------------------

std::vector<C2Parser::MuldivContext *> C2Parser::AddSubExprContext::muldiv() {
  return getRuleContexts<C2Parser::MuldivContext>();
}

C2Parser::MuldivContext* C2Parser::AddSubExprContext::muldiv(size_t i) {
  return getRuleContext<C2Parser::MuldivContext>(i);
}

C2Parser::AddSubExprContext::AddSubExprContext(AddsubContext *ctx) { copyFrom(ctx); }


std::any C2Parser::AddSubExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitAddSubExpr(this);
  else
    return visitor->visitChildren(this);
}
C2Parser::AddsubContext* C2Parser::addsub() {
  AddsubContext *_localctx = _tracker.createInstance<AddsubContext>(_ctx, getState());
  enterRule(_localctx, 18, C2Parser::RuleAddsub);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<C2Parser::AddSubExprContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(110);
    muldiv();
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C2Parser::T__19

    || _la == C2Parser::T__20) {
      setState(111);
      _la = _input->LA(1);
      if (!(_la == C2Parser::T__19

      || _la == C2Parser::T__20)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(112);
      muldiv();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MuldivContext ------------------------------------------------------------------

C2Parser::MuldivContext::MuldivContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t C2Parser::MuldivContext::getRuleIndex() const {
  return C2Parser::RuleMuldiv;
}

void C2Parser::MuldivContext::copyFrom(MuldivContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MulDivExprContext ------------------------------------------------------------------

std::vector<C2Parser::UnaryContext *> C2Parser::MulDivExprContext::unary() {
  return getRuleContexts<C2Parser::UnaryContext>();
}

C2Parser::UnaryContext* C2Parser::MulDivExprContext::unary(size_t i) {
  return getRuleContext<C2Parser::UnaryContext>(i);
}

C2Parser::MulDivExprContext::MulDivExprContext(MuldivContext *ctx) { copyFrom(ctx); }


std::any C2Parser::MulDivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C2Visitor*>(visitor))
    return parserVisitor->visitMulDivExpr(this);
  else
    return visitor->visitChildren(this);
}
C2Parser::MuldivContext* C2Parser::muldiv() {
  MuldivContext *_localctx = _tracker.createInstance<MuldivContext>(_ctx, getState());
  enterRule(_localctx, 20, C2Parser::RuleMuldiv);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<C2Parser::MulDivExprContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(118);
    unary();
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C2Parser::T__21

    || _la == C2Parser::T__22) {
      setState(119);
      _la = _input->LA(1);
      if (!(_la == C2Parser::T__21
